# dotfiles

./: .chezmoidata.yaml  .chezmoiexternal.toml  .chezmoiignore  .gitignore  .golangci.yaml  .goreleaser-ci.yaml  .goreleaser.yaml  .markdownlint-cli2.yaml  .markdownlint.yaml  .pre-commit-config.yaml  AGENTS.md  Brewfile  Brewfile.lock.json  Brewfile.vscode  Dockerfile  Makefile  README.md  chezmoi.toml  dot_brewfile  dot_gitconfig  dot_gitconfig-github  dot_gitconfig-gitlab  dot_gitconfig-work  dot_gitconfig.tmpl  dot_netrc.tmpl  dot_npmrc  dot_npmrc.tmpl  dot_p10k.zsh  dot_tmux.conf  dot_wgetrc  dot_wgetrc.tmpl  dot_zshrc  dot_zshrc.tmpl  go.mod  go.sum  main.go  pyproject.toml  run_once_before_00-setup.sh.tmpl  run_once_before_01-install-deps.sh.tmpl  run_once_before_02-cleanup.sh.tmpl  (+2 more)
.github/workflows/: ci.yml  test_sast.yml
cmd/: apply.go  configure.go  doc.go  root.go
config/: chezmoi.toml
dot_config/: starship.toml
dot_config/aerospace/: aerospace.toml
dot_config/dot_jira/: dot_config.yml
dot_config/ghostty/: config.ghostty
dot_config/opencode/: .chezmoiignore  .markdownlint-cli2.yaml  README.md  agent-frontmatter.cjs  dot_gitignore  opencode.json  package.json
dot_config/private_fish/: config.fish  config.fish.tmpl  fish_plugins  private_fish_variables
dot_config/private_grafana-assistant/: modify_private_config.yaml  (+1 more)
dot_zshrc.d/: aliases.zsh  env.zsh  env.zsh.tmpl  keybindings.zsh  plugins.zsh
scripts/: configure.py  configure.sh  e2e.sh  install.sh  run_once_before_install-deps.sh.tmpl  run_once_before_install-deps.zsh.tmpl
(+30 files in other folders)
