[project]
name = "dotfiles"
version = "0.1.0"
description = "My personal dotfiles."
authors = [
    { name = "lvlcn-t", email = "75443136+lvlcn-t@users.noreply.github.com" },
]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.13"
dependencies = ["toml (>=0.10.2,<0.11.0)"]

[tool.poetry]
package-mode = false

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"
ruff = "^0.11.4"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
